# EEPROM-Programmer

./: .gitignore  Readme.md
Hardware/PCB/: EEPROM-Programmer.kicad_prl  EEPROM-Programmer.kicad_pro  EEPROM-Programmer.kicad_sch  custom.bak  custom.kicad_sym  dataHandling.kicad_sch  logic.kicad_sch  power.kicad_sch  stateMachine.kicad_sch  ~EEPROM-Programmer.kicad_sch.lck
Software/CLI-Programmer/: CMakeLists.txt
Software/CLI-Programmer/src/: ChipSettings.cpp  Comms.cpp  main.cpp  programmerBasic.cpp  test.cpp  usb.cpp
Software/CLI-Programmer/src/headers/: Comms.hpp  chipSettings.hpp  main.hpp
Software/CLI-Programmer/src/include/: Comms.hpp  main.hpp
Software/arduino/analyze/: analyze.ino
Software/arduino/pulseCount/: pulseCount.ino
Software/arduino/rsLatch/: rsLatch.ino
Software/arduino/shiftSimulate/: shiftSimulate.ino
Software/cli_programmer/: Cargo.toml
Software/cli_programmer/src/: main.rs
Software/rust-test/: Cargo.toml
Software/rust-test/src/: main.rs
Software/test/: a.out  test.c
